--- a/dmimg.css
+++ b/dmimg.css
@@ -1,4 +1,17 @@
+
+header {
+    background-color: #39444A;
+    color: #E4CFB6;
+}
+
 .flex-container{
     display: flex;
     flex-direction: column;
+    background-color: #E4CFB6;
+}
+
+.flex-container > div {
+    width: 90%;
+    margin: 10px;
+    background-color: #9e978e;
 }
