--- a/dmimg.css
+++ b/dmimg.css
@@ -2,16 +2,20 @@
 header {
     background-color: #39444A;
     color: #E4CFB6;
+    width: 100%;
+    height: 70px;
 }
 
 div.flex-container{
     display: flex;
     flex-direction: column;
     background-color: #E4CFB6;
+    width: 100%;
 }
 
 div.flex-container > div {
     width: 90%;
-    margin: 10px;
     background-color: #9e978e;
+    align-self: center;
+    
 }
