--- a/dmimg.css
+++ b/dmimg.css
@@ -5,10 +5,22 @@ header {
     width: 100%;
     height: 100px;
 }
-
-h3{
-    color: #39444A;
+h1 {
+    font-family: Helvetica, "Helvetica Neue", sans-serif;
 }
+
+h2  {
+    font-family: Helvetica, "Helvetica Neue", sans-serif;
+
+}
+
+.box-tittle {
+    color: #39444A;
+    font-family: Helvetica, "Helvetica Neue", sans-serif;
+
+}
+
+
 div.flex-container{
     display: flex;
     flex-direction: column;
@@ -21,5 +33,6 @@ div.flex-container > div {
     background-color: #9e978e;
     align-self: center;
     margin-bottom: 10px;
+    margin-top: 10px;
     
 }
