--- a/dmimg.css
+++ b/dmimg.css
@@ -55,11 +55,11 @@ div.flex-containerh > div {
  
 } 
 
-.main-tit {
+div.flex-containerh.main-tit {
     background-color: #39444A;
     padding: 10px;
 }
-.container {
+div.flex-containerh.container {
     background-color: #f0e9e2;
     padding: 10px;
 }
