Revert "Update dmimg.css"
This reverts commit 6eee73ba471459682e63e098b3294c25404ae92e.

--- a/dmimg.css
+++ b/dmimg.css
@@ -55,11 +55,11 @@ div.flex-containerh > div {
  
 } 
 
-div.flex-containerh.main-tit {
+.main-tit {
     background-color: #39444A;
     padding: 10px;
 }
-div.flex-containerh.container {
+.container {
     background-color: #f0e9e2;
     padding: 10px;
 }
