--- a/Maninastyle.css
+++ b/Maninastyle.css
@@ -1,5 +1,5 @@
 #hdr {
-    height: 20px;
+    height: 40px;
     background-color: black;
     color:white;
     text-align: center;
@@ -22,9 +22,9 @@
 
 .fotodescr{
     width: 100%;
-    height: 300px;
+    height: 200px;
     display: flex;
-    overflow-x: auto;
+    overflow-y: auto;
 
 }
 
@@ -35,4 +35,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Cursive;
+    color: white;
 }
