--- a/Maninastyle.css
+++ b/Maninastyle.css
@@ -36,6 +36,7 @@
     align-items: center;
     justify-content: center;
     font-family: Cursive;
+    font-size: 25px;
     color: white;
 }
 
@@ -44,7 +45,7 @@
     height: 250px;
     display: flex;
     overflow-y: auto;
-    background-color: #33cccc;
+    background-color: #248f8f;
 
 }
 
@@ -53,7 +54,7 @@
     height: 250px;
     display: flex;
     overflow-y: auto;
-    background-color: #2eb8b8;
+    background-color: #248f8f;
 
 }
 .Postres{
@@ -61,7 +62,7 @@
     height: 250px;
     display: flex;
     overflow-y: auto;
-    background-color: #29a3a3;
+    background-color: #248f8f;
 
 }
 
@@ -75,13 +76,14 @@
 }
 
 .contprincipalA {
-    width: 100px;
+    width: 120px;
     height: 100%;
     flex: 0 0 auto;
     display: flex;
     align-items: center;
     justify-content: left;
     font-family: Cursive;
+    font-size: 20px;
     color: white;
 }
 
@@ -93,30 +95,8 @@
     align-items: center;
     justify-content: left;
     font-family: Cursive;
+    font-size: 20px;
     color: white;
     background-color: #2eb8b8;
 }
 
-.contprincipalC {
-    width: 100px;
-    height: 100%;
-    flex: 0 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    font-family: Cursive;
-    color: white;
-    background-color: #33cccc;
-}
-
-.contprincipalD {
-    width: 100%;
-    height: 100%;
-    flex: 0 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    font-family: Cursive;
-    color: white;
-    background-color: #2eb8b8;
-}
