--- a/Maninastyle.css
+++ b/Maninastyle.css
@@ -40,7 +40,7 @@
     color: white;
 }
 
-.Entradas{
+.SeccionPrincipal{
     width: 100%;
     height: 250px;
     display: flex;
@@ -49,31 +49,6 @@
 
 }
 
-.Principales{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    overflow-y: auto;
-    background-color: #248f8f;
-
-}
-.Postres{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    overflow-y: auto;
-    background-color: #248f8f;
-
-}
-
-.Bebidas{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    overflow-y: auto;
-    background-color: #248f8f;
-
-}
 
 .contprincipalA {
     width: 120px;
