--- a/Maninastyle.css
+++ b/Maninastyle.css
@@ -75,3 +75,16 @@
     background-color: #2eb8b8;
 }
 
+.contprincipalC {
+    width: 100%;
+    height: 100%;
+    flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    font-family: Cursive;
+    font-size: 20px;
+    color: white;
+    background-color: #47d1d1;
+}
+
